--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
   margin-left:10px;
 }
 .page-heading{
-  font-family: Sancreek;
+  font-family: 'Sancreek', cursive;
 font-style: normal;
 font-weight: normal;
 font-size: 24px;
 line-height: 33px;
 
-color: #FFF1F1;
+color:aqua;
 background-color:black;
 text-align: center;
 padding:20px;
@@ -28,3 +28,7 @@ ul {
   justify-content: space-between;
   list-style: none; 
 }
+ p{
+
+font-family: 'Rufina', serif;
+ }
